--- a/fnd/src/main/resources/i18n/messages.properties
+++ b/fnd/src/main/resources/i18n/messages.properties
@@ -25,3 +25,10 @@
 1602000002=仓库名不能为空
 1602000003=未查询到仓库信息
 1602000004=仓库发货区域不能为空
+
+
+
+
+2000000001=产品编码已存在
+2000000002=产品编码不存在
+2000000003=产品编码不能修改
