--- a/fnd/src/main/resources/i18n/messages.properties
+++ b/fnd/src/main/resources/i18n/messages.properties
@@ -7,6 +7,7 @@
 1610000003=用户名错误！
 100010004=密码不能为空！
 1610000008=账号被冻结！
+161000011=Token已过期，请重新登录!
 
 1610000001=不存在该用户
 1610000004=密码不能为空
@@ -18,6 +19,7 @@
 1610000011=用户id不能为空
 1610000012=用户身份不正确
 1610000013=超出用户数据权限
+
 
 
 #*********仓库管理错误码***1602开头10位错误码************
